Code cleanup; remove warnings, add braces, remove unnecessary code
git-svn-id: https://svn.apache.org/repos/asf/incubator/harmony/enhanced/classlib/trunk@447707 13f79535-47bb-0310-9956-ffa450edef68